scaffolding for team project